# logohunter

./: .gitignore  .rules  CHANGES.md  LICENSE  README.md  pyproject.toml
src/: logohunt.py
src/logo_hunter/: hunter.py  test_hunter.py
src/logo_hunter/rules/dimensions/: bonus.py  bonuses.txt  penalties.txt  penalty.py
src/logo_hunter/rules/html/: bonuses.txt  penalties.txt  penalty.py
src/logohunter/: __init__.py  scoring.py  test_hunter.py
src/logohunter/rules/: __init__.py
src/logohunter/rules/dimensions/: __init__.py  penalties.txt  penalty.py
src/logohunter/rules/html/: __init__.py  bonus.py  penalties.txt
